# br-acc

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  GuiaDeploy.txt  Makefile  OVERNIGHT_REPORT_2026-05-02.md  README.md  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml
etl/: .dockerignore  Dockerfile  pyproject.toml
etl/scripts/: _download_utils.py  audit_first_last_match.py  cleanup_doou_duplicates.py  download_caged.py  download_cnpj.py  download_cnpj_bq.py  download_senado_cpis.py  download_state_portal_go.py  download_tse.py  download_un_sanctions.py  explore_cnpj_bd.py  promote_first_last_6.py
etl/src/bracc_etl/: archival.py  base.py  loader.py  (+3 more)
etl/tests/: _mock_helpers.py  test_alego_deputados_foto.py  test_alego_pipeline.py  test_archival.py  test_base.py  test_bcb_pipeline.py  test_bndes_pipeline.py  test_brasilapi_cnpj_status.py  test_brazilian_numbers.py  test_caged_pipeline.py  test_camara_goiania_pipeline.py  test_camara_inquiries_pipeline.py  test_camara_pipeline.py  test_camara_politicos_go.py  test_ceaf_pipeline.py  test_cepim_pipeline.py  test_cnpj_pipeline.py  test_comprasnet_pipeline.py  test_cpgf_pipeline.py  test_custo_mandato_br.py  test_custo_mandato_municipal_go.py  test_cvm_funds_pipeline.py  test_cvm_pipeline.py  test_datajud_pipeline.py  test_datasus_pipeline.py  test_dou_pipeline.py  test_download_cnpj_bq.py  test_download_scripts.py  test_download_senado_cpi_archive.py  test_emendas_parlamentares_go.py  test_entity_resolution_politicos_go.py  test_entity_resolution_tce_go.py  test_eu_sanctions_pipeline.py  test_folha_go_pipeline.py  test_holdings_pipeline.py  test_ibama_pipeline.py  test_icij_pipeline.py  test_inep_pipeline.py  test_leniency_pipeline.py  test_linking_hooks.py  (+51 more)
(+534 files in other folders)
